:sparkles: Quiz Cron Job

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   mongodb:
-    container_name: "ququiz-mongo"
+    container_name: 'ququiz-mongo'
     image: 'mongo:latest'
     ports:
       - '27017:27017'
@@ -10,3 +10,11 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     env_file:
       - ./.env
+  dkron:
+    image: dkron/dkron
+    ports:
+      - '9911:8080'
+    command: agent --server --bootstrap-expect=1 --node-name=node1
+    environment:
+      - DKRON_BACKEND_MACHINE_URL=dkron://dkron:8946
+    restart: always
