--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,16 @@ services:
     environment:
       - DKRON_BACKEND_MACHINE_URL=dkron://dkron:8946
     restart: always
+  quiz:
+    container_name: "ququiz-quiz"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 3502:3000
+    env_file:
+      - ./.env
+    volumes:
+      - ./src:/app/src
+    depends_on:
+      - mongodb
