--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,4 +49,5 @@ services:
       - DKRON_API_URL=http://dkron:9911/v1
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5673
       - SERVICE_URL=http://quiz:3502
+      - USERS_SERVICE_GRPC_URL=ququiz-authentications:3502
 
