fix: port and url mapping

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ RABBITMQ_PASSWORD=guest
 DKRON_API_URL=http://localhost:9911/v1
 RABBITMQ_URL=localhost:5673
 USERS_SERVICE_GRPC_URL=localhost:4501
+QUIZ_SERVICE_URL=http://localhost:3000
+SCORING_SERVICE_URL=http://localhost:3504
