--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
     environment:
       - DKRON_API_URL=http://dkron:9911/v1
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5673
-      - SERVICE_URL=http://quiz:3502
-      - USERS_SERVICE_GRPC_URL=ququiz-authentications:3502
+      - QUIZ_SERVICE_URL=http://quiz:3502
+      - USERS_SERVICE_GRPC_URL=ququiz-authentications:3501
+      - SCORING_SERVICE_URL=http://localhost:3504
 
