--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/microservices": "^10.3.9",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@testcontainers/mongodb": "^10.9.0",
     "@types/amqplib": "^0.10.5",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
@@ -40,6 +41,7 @@
     "mongodb": "^5.9.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "testcontainers": "^10.9.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
