--- a/package.json
+++ b/package.json
@@ -71,10 +71,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "./",
-    "modulePaths": [
-      "<rootDir>"
-    ],
+    "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
