--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ RABBITMQ_URL=localhost:5673
 USERS_SERVICE_GRPC_URL=localhost:4501
 QUIZ_SERVICE_URL=http://localhost:3000
 SCORING_SERVICE_URL=http://localhost:3504
+IS_UTC=false
